kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-custom-container
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: my-container
          imagePullPolicy: Always
          image: pavan8184/kubernetes-test:v1
          ports:
            - containerPort: 80
